Greasepencil-object branch invisible strokes when overtop of a filled shape #52100

Closed
opened 2017-07-18 02:52:27 +02:00 by Thomas Downs · 4 comments

System Information
Arch Linux
Nvidia 750ti

Blender Version
Broken: 0b2c08194301ce8429cc3523d4d99a5d2f3a36a1 (for at least a few weeks I think)
Worked: 2.78

Short description of error
When drawing a new stroke overtop of a filled stroke the stroke is invisible (even when the fill is at near transparency) until after the stroke is finished.
Changing the draw mode doesn't affect the issue.

Exact steps for others to reproduce the error
Make a filled and outlined grease pencil shape, draw overtop of it, notice that you can't see the new stroke during the draw; but it appears after the stroke is completed.

**System Information** Arch Linux Nvidia 750ti **Blender Version** Broken: 0b2c08194301ce8429cc3523d4d99a5d2f3a36a1 (for at least a few weeks I think) Worked: 2.78 **Short description of error** When drawing a new stroke overtop of a filled stroke the stroke is invisible (even when the fill is at near transparency) until after the stroke is finished. Changing the draw mode doesn't affect the issue. **Exact steps for others to reproduce the error** Make a filled and outlined grease pencil shape, draw overtop of it, notice that you can't see the new stroke during the draw; but it appears after the stroke is completed.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tnelsond

Added subscriber: @tnelsond
Antonio Vazquez self-assigned this 2017-07-18 09:58:58 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed with 05058ab4430f

Fixed with 05058ab4430f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52100
No description provided.